# chess-rating

./: LICENSE  README.md  pyproject.toml  setup.cfg
chess_rating/: __init__.py  __main__.py
