[metadata]
name=chess_rating
version=1.0
description=tool to store and modify ELO chess ratings
long_description=file: README.md
author=sushant
author_email=sushant.padha@gmail.com
url=https://github.com/Sushant-Padha/chess-rating
license=MIT

[options]
packages=find:
install_requires=
    prettytable == 2.1.0
