[metadata]
name=chess_rating
version=1.0
description=tool to store and modify ELO chess ratings
long_description=file: README.md
author=sushantpadha
author_email=24b1057@iitb.ac.in
url=https://github.com/sushantpadha/chess-rating
license=MIT

[options]
packages=find:
install_requires=
    prettytable == 2.1.0
